Bug 1310814 - Add ObjC exception guards. r=spohl

With the added safety checks it's unlikely that anything in this function will
fire ObjC exceptions, but our rule is to have guards around every Objective C
function that can directly be called from C++ files.

MozReview-Commit-ID: GQ0bN5638Sf