xpcom/base/MacHelpers.mm
@@ -6,6 +6,7 @@
 
 #include "nsString.h"
 #include "MacHelpers.h"
+#include "nsObjCExceptions.h"
 
 #import <Foundation/Foundation.h>
 
@@ -14,6 +15,8 @@ namespace mozilla {
 nsresult
 GetSelectedCityInfo(nsAString& aCountryCode)
 {
+  NS_OBJC_BEGIN_TRY_ABORT_BLOCK_NSRESULT;
+
   // Can be replaced with [[NSLocale currentLocale] countryCode] once we build
   // with the 10.12 SDK.
   id countryCode = [[NSLocale currentLocale] objectForKey:NSLocaleCountryCode];
@@ -30,6 +33,8 @@ GetSelectedCityInfo(nsAString& aCountryCode)
 
   AppendUTF8toUTF16(countryCodeUTF8, aCountryCode);
   return NS_OK;
+
+  NS_OBJC_END_TRY_ABORT_BLOCK_NSRESULT;
 }
 
 } // namespace Mozilla
